Combine blocks within states + subjects grand average

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -118,6 +118,7 @@
     "        T_obs, clusters, cluster_pv, H0 = spatio_temporal_cluster_test([X1,X2], connectivity=connectivity, threshold=f_threshold, n_jobs=4)\n",
     "    \n",
     "    mask = np.ones(T_obs.shape)\n",
+    "    \n",
     "    for c,clu in enumerate(clusters):\n",
     "        mask[clu] = cluster_pv[c]\n",
     "    \n",
@@ -128,9 +129,8 @@
     "        h *= T_obs.shape[1]/2\n",
     "        i *= T_obs.shape[1]/2\n",
     "        \n",
-    "        stat_file = stat_file + '-' + hemi\n",
-    "        np.savetxt(stat_file+'-T_stat.tsv', T_obs[:,int(h):int(i)], delimiter='\\t')\n",
-    "        np.savetxt(stat_file+'-p_val.tsv', mask[:,int(h):int(i)], delimiter='\\t')\n",
+    "        np.savetxt(stat_file+'-'+hemi+'-T_stat.tsv', T_obs[:,int(h):int(i)], delimiter='\\t')\n",
+    "        np.savetxt(stat_file+'-'+hemi+'-p_val.tsv', mask[:,int(h):int(i)], delimiter='\\t')\n",
     "    \n",
     "    return T_obs, clusters, cluster_pv, H0, mask"
    ]
