--- a/code/stats_viz.ipynb
+++ b/code/stats_viz.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "task = 'SMEG'\n",
     "path = op.join(Analysis_path, task, 'meg', 'Stats')\n",
-    "test_key = 'N_vs_E+RS'\n",
+    "test_key = 'N_vs_E+FA-OM'\n",
+    "p_thresh = 0.05\n",
     "sfreq = 200\n",
     "start = 0.3\n",
     "stop = 0.5\n",
@@ -52,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if np.where(pv_lh<0.05)[0].any():\n",
-    "    t_signif_lh = np.unique(np.where(pv_lh<0.05)[0], return_counts=True)\n",
+    "if np.where(pv_lh<p_thresh)[0].any():\n",
+    "    t_signif_lh = np.unique(np.where(pv_lh<p_thresh)[0], return_counts=True)\n",
     "    best_t_lh = t_signif_lh[0][t_signif_lh[1].argsort()][::-1]\n",
     "    print(t_signif_lh)\n",
     "    print(best_t_lh)\n",
@@ -68,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if np.where(pv_rh<0.05)[0].any():\n",
-    "    t_signif_rh = np.unique(np.where(pv_rh<0.05)[0], return_counts=True)\n",
+    "if np.where(pv_rh<p_thresh)[0].any():\n",
+    "    t_signif_rh = np.unique(np.where(pv_rh<p_thresh)[0], return_counts=True)\n",
     "    best_t_rh = t_signif_rh[0][t_signif_rh[1].argsort()][::-1]\n",
     "    print(t_signif_rh)\n",
     "    print(best_t_rh)\n",
@@ -88,8 +89,10 @@
     "#t = int(best_t_rh[8])\n",
     "#t = int(best_t_lh[0])\n",
     "print('t =', (t+start*sfreq)/sfreq)\n",
-    "lh = np.where(pv_lh[t]<0.05)\n",
-    "rh = np.where(pv_rh[t]<0.05)"
+    "mask_lh = np.where(pv_lh[t]<p_thresh)\n",
+    "mask_rh = np.where(pv_rh[t]<p_thresh)\n",
+    "lh = np.where(pv_lh[t]<p_thresh, data_lh[t], 0)\n",
+    "rh = np.where(pv_rh[t]<p_thresh, data_rh[t], 0)"
    ]
   },
   {
@@ -98,9 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmin = np.min(np.concatenate([data_lh[t][lh], data_rh[t][rh]]))\n",
-    "cmax = np.max(np.concatenate([data_lh[t][lh], data_rh[t][rh]]))\n",
-    "clim = (-np.max(np.abs([cmin, cmax])), np.max(np.abs([cmin, cmax])))"
+    "cmax = np.max(np.abs(np.concatenate([lh, rh])))\n",
+    "clim = (-cmax, cmax)"
    ]
   },
   {
@@ -113,12 +115,15 @@
     "\n",
     "#b_obj.add_activation(data=data_lh[t], vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
     "#b_obj.add_activation(data=data_rh[t], vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
-    "#b_obj.add_activation(data=data_lh[t][lh], vertices=vertices[lh], hemisphere='left', cmap='bwr', clim=clim)\n",
-    "#b_obj.add_activation(data=data_rh[t][rh], vertices=vertices[rh], hemisphere='right', cmap='bwr', clim=clim)\n",
+    "#b_obj.add_activation(data=data_lh[t][mask_lh], vertices=vertices[mask_lh], hemisphere='left', cmap='bwr', clim=clim)\n",
+    "#b_obj.add_activation(data=data_rh[t][mask_rh], vertices=vertices[mask_rh], hemisphere='right', cmap='bwr', clim=clim)\n",
     "#b_obj.add_activation(data=np.where(pv_lh[t]>=0.05, -np.inf, data_lh[t]), hide_under=clim[0], vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
     "#b_obj.add_activation(data=np.where(pv_lh[t]>=0.05, -np.inf, data_rh[t]), hide_under=clim[0], vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
-    "b_obj.add_activation(data=np.where(pv_lh[t]<0.05, data_lh[t], 0), vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
-    "b_obj.add_activation(data=np.where(pv_rh[t]<0.05, data_lh[t], 0), vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
+    "#b_obj.add_activation(data=np.where(pv_lh[t]<0.05, data_lh[t], 0), vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
+    "#b_obj.add_activation(data=np.where(pv_rh[t]<0.05, data_lh[t], 0), vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
+    "b_obj.add_activation(data=lh, vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
+    "b_obj.add_activation(data=rh, vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
+    "\n",
     "\n",
     "vb = Brain(brain_obj=b_obj)\n",
     "#cb = Colorbar(vmin=clim[0], vmax=clim[-1], cmap='bwr', ndigits=4, cblabel='T stat')"
