Stats netCDF update + Evoked rejection & plot fix

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -75,7 +75,7 @@
     "for st,state in enumerate(states):\n",
     "    print(state)\n",
     "    for su,sub in enumerate(tqdm(subjects)):\n",
-    "        stc_file = op.join(stc_path, sub, state+'*'+name+'*'+noise_cov+'*'+(fsaverage if fsaverage else '')+stc_ext)\n",
+    "        stc_file = op.join(stc_path, 'fsaverage', sub, state+'-'+name+'-'+noise_cov+'*'+stc_ext)\n",
     "        data = mne.read_source_estimate(glob.glob(stc_file)[0].strip(stc_ext))\n",
     "        if sfreq:\n",
     "            data.resample(sfreq)\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cluster_perm_test(X1, X2, stat_file, p_threshold=0.01, connectivity='ico5', paired=False):\n",
+    "def cluster_perm_test(X1, X2, stat_file, test_key, times, vertices, mode='a', p_threshold=0.01, connectivity='ico5', paired=False):\n",
     "    \"\"\"\n",
     "    If paired, test X2-X1.\n",
     "    Input: arrays of shape (subjects, time, space)\n",
@@ -117,21 +117,38 @@
     "        f_threshold = f.ppf(1 - p_threshold / 2, X1.shape[0] - 1, X2.shape[0] - 1)\n",
     "        T_obs, clusters, cluster_pv, H0 = spatio_temporal_cluster_test([X1,X2], connectivity=connectivity, threshold=f_threshold, n_jobs=4)\n",
     "    \n",
-    "    mask = np.ones(T_obs.shape)\n",
+    "    p_val = np.ones(T_obs.shape)\n",
+    "    clu_inds = np.zeros(T_obs.shape)\n",
     "    \n",
     "    for c,clu in enumerate(clusters):\n",
-    "        mask[clu] = cluster_pv[c]\n",
+    "        p_val[clu] = cluster_pv[c]\n",
+    "        clu_inds[clu] = c+1\n",
+    "    \n",
+    "    stats = np.zeros((3, 2, len(times), len(vertices)))\n",
+    "    stats = xr.DataArray(stats, dims=['data', 'hemisphere', 'time', 'src'], coords={'data':['T_stat', 'p_val', 'clu_inds'], 'hemisphere':['left', 'right'], 'time':times, 'src':vertices})\n",
+    "    for h,hemi in enumerate(['left', 'right']):\n",
+    "        i = h + 1\n",
+    "        h *= len(vertices)\n",
+    "        i *= len(vertices)\n",
+    "        stats.loc['T_stat', hemi] = T_obs[:, h:i]\n",
+    "        stats.loc['p_val', hemi] = p_val[:, h:i]\n",
+    "        stats.loc['clu_inds', hemi] = clu_inds[:, h:i]\n",
     "    \n",
     "    if not op.isdir(op.split(stat_file)[0]):\n",
     "        os.makedirs(op.split(stat_file)[0])\n",
-    "    for h,hemi in enumerate(['lh', 'rh']):\n",
-    "        i = h + 1\n",
-    "        h *= T_obs.shape[1]/2\n",
-    "        i *= T_obs.shape[1]/2\n",
-    "        \n",
-    "        np.savetxt(stat_file+'-'+hemi+'-T_stat.tsv', T_obs[:,int(h):int(i)], delimiter='\\t')\n",
-    "        np.savetxt(stat_file+'-'+hemi+'-p_val.tsv', mask[:,int(h):int(i)], delimiter='\\t')\n",
     "    \n",
+    "    if not op.isfile(stat_file):\n",
+    "        mode = 'w'\n",
+    "    \n",
+    "    stats.to_netcdf(path=stat_file, group=test_key, mode=mode)\n",
+    "    #for h,hemi in enumerate(['lh', 'rh']):\n",
+    "    #    i = h + 1\n",
+    "    #    h *= T_obs.shape[1]/2\n",
+    "    #    i *= T_obs.shape[1]/2\n",
+    "    #    \n",
+    "    #    np.savetxt(stat_file+'-'+hemi+'-T_stat.tsv', T_obs[:,int(h):int(i)], delimiter='\\t')\n",
+    "    #    np.savetxt(stat_file+'-'+hemi+'-p_val.tsv', mask[:,int(h):int(i)], delimiter='\\t')\n",
+    "    #\n",
     "    return T_obs, clusters, cluster_pv, H0, mask"
    ]
   },
@@ -151,7 +168,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stat_path = op.join(Analysis_path, task, 'meg', 'Stats')\n",
     "T_obs=dict(); clusters=dict(); cluster_pv=dict(); H0=dict(); mask=dict()"
    ]
   },
@@ -163,97 +179,88 @@
    "source": [
     "t0 = time.perf_counter()\n",
     "ti = t0\n",
-    "start = .3\n",
-    "stop = .5\n",
+    "start = float(stc.time[0])\n",
+    "stop = float(stc.time[-1])\n",
+    "vertno = np.arange(stc.shape[-1]/2, dtype=int)\n",
+    "\n",
+    "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', '{}_{}'.format(round(start,4),round(stop,4)))\n",
+    "if not op.isdir(stat_path):\n",
+    "    os.makedirs(stat_path)\n",
+    "stat_file = op.join(stat_path, name+'-'+noise_cov+'.nc')\n",
     "\n",
     "test_key = 'RS_vs_FA'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',:,start:stop].values, stc.loc['FA',:,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',:,start:stop].values, stc.loc['FA',:,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'RS_vs_OM'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',:,start:stop].values, stc.loc['OM',:,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',:,start:stop].values, stc.loc['OM',:,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'OM_vs_FA'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',:,start:stop].values, stc.loc['FA',:,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',:,start:stop].values, stc.loc['FA',:,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'RS_vs_FA+E'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',experts,start:stop].values, stc.loc['FA',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',experts,start:stop].values, stc.loc['FA',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'RS_vs_OM+E'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',experts,start:stop].values, stc.loc['OM',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',experts,start:stop].values, stc.loc['OM',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'OM_vs_FA+E'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',experts,start:stop].values, stc.loc['FA',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',experts,start:stop].values, stc.loc['FA',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'RS_vs_FA+N'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',novices,start:stop].values, stc.loc['FA',novices,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',novices,start:stop].values, stc.loc['FA',novices,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'RS_vs_OM+N'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',novices,start:stop].values, stc.loc['OM',novices,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',novices,start:stop].values, stc.loc['OM',novices,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'OM_vs_FA+N'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',novices,start:stop].values, stc.loc['FA',novices,start:stop].values, stat_file=stat_file, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',novices,start:stop].values, stc.loc['FA',novices,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "\n",
     "test_key = 'N_vs_E+RS'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',novices,start:stop].values, stc.loc['RS',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',novices,start:stop].values, stc.loc['RS',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'N_vs_E+FA'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['FA',novices,start:stop].values, stc.loc['FA',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['FA',novices,start:stop].values, stc.loc['FA',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'N_vs_E+OM'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',novices,start:stop].values, stc.loc['OM',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',novices,start:stop].values, stc.loc['OM',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'N_vs_E+FA-RS'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['FA',novices,start:stop].values-stc.loc['RS',novices,start:stop].values, stc.loc['FA',experts,start:stop].values-stc.loc['RS',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['FA',novices,start:stop].values-stc.loc['RS',novices,start:stop].values, stc.loc['FA',experts,start:stop].values-stc.loc['RS',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'N_vs_E+OM-RS'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',novices,start:stop].values-stc.loc['RS',novices,start:stop].values, stc.loc['OM',experts,start:stop].values-stc.loc['RS',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['OM',novices,start:stop].values-stc.loc['RS',novices,start:stop].values, stc.loc['OM',experts,start:stop].values-stc.loc['RS',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
     "test_key = 'N_vs_E+FA-OM'\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'-'+test_key+'-'+str(round(start,4))+'_'+str(round(stop,4))+'_t_window'+(fsaverage if fsaverage else ''))\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['FA',novices,start:stop].values-stc.loc['OM',novices,start:stop].values, stc.loc['FA',experts,start:stop].values-stc.loc['OM',experts,start:stop].values, stat_file=stat_file, connectivity=connectivity)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['FA',novices,start:stop].values-stc.loc['OM',novices,start:stop].values, stc.loc['FA',experts,start:stop].values-stc.loc['OM',experts,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
     "ti = time.perf_counter()\n",
     "\n",
