--- a/code/stats_viz.ipynb
+++ b/code/stats_viz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,34 +17,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "task = 'SMEG'\n",
-    "path = op.join(Analysis_path, task, 'meg', 'Stats')\n",
-    "test_key = 'N_vs_E+FA-OM'\n",
-    "p_thresh = 0.05\n",
-    "sfreq = 200\n",
+    "names = ['R_ECG_included', 'R_ECG_excluded', 'T_ECG_included', 'T_ECG_excluded']\n",
+    "name = names[0]\n",
+    "noise_cov = 'baseline_cov'\n",
     "start = 0.3\n",
     "stop = 0.5\n",
-    "filename = op.join(path, '*-'+test_key+'-*'+str(start)+'_'+str(stop)+'*fsaverage*')\n",
-    "files = glob.glob(filename)"
+    "sfreq = 200\n",
+    "path = op.join(Analysis_path, task, 'meg', 'Stats', str(start)+'_'+str(stop))\n",
+    "filename = op.join(path, name+'-'+noise_cov+'.nc')\n",
+    "test_key = 'N_vs_E+FA-OM'\n",
+    "p_thresh = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray (data: 3, hemisphere: 2, time: 41, src: 10242)>\n",
+       "array([[[[  6.906465e-02, ...,   1.268053e+01],\n",
+       "         ..., \n",
+       "         [  4.506646e-01, ...,   3.089404e+00]],\n",
+       "\n",
+       "        [[  2.904559e-01, ...,   4.491989e+00],\n",
+       "         ..., \n",
+       "         [  1.215011e+00, ...,   8.858618e-01]]],\n",
+       "\n",
+       "\n",
+       "       ..., \n",
+       "       [[[  0.000000e+00, ...,   1.000000e+00],\n",
+       "         ..., \n",
+       "         [  0.000000e+00, ...,   0.000000e+00]],\n",
+       "\n",
+       "        [[  0.000000e+00, ...,   1.300000e+02],\n",
+       "         ..., \n",
+       "         [  0.000000e+00, ...,   0.000000e+00]]]])\n",
+       "Coordinates:\n",
+       "  * time        (time) float64 0.3 0.305 0.31 0.315 0.32 0.325 0.33 0.335 ...\n",
+       "  * src         (src) float64 0.0 1.0 2.0 3.0 4.0 5.0 6.0 7.0 8.0 9.0 10.0 ...\n",
+       "  * hemisphere  (hemisphere) object 'left' 'right'\n",
+       "  * data        (data) object 'T_stat' 'p_val' 'clu_inds'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pv_lh = np.loadtxt(files[0])\n",
-    "data_lh = np.loadtxt(files[1])\n",
-    "\n",
-    "vertices = np.arange(data_lh.shape[1])\n",
-    "\n",
-    "pv_rh = np.loadtxt(files[2])\n",
-    "data_rh = np.loadtxt(files[3])"
+    "stats = xr.open_dataarray(filename, test_key)\n",
+    "stats.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(5)"
    ]
   },
   {
