Evoked + Heartbeat checking update

--- a/code/stats_viz.ipynb
+++ b/code/stats_viz.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,49 +25,49 @@
     "names = ['R_ECG_included', 'R_ECG_excluded', 'T_ECG_included', 'T_ECG_excluded']\n",
     "name = names[0]\n",
     "noise_cov = 'baseline_cov'\n",
-    "start = 0.3\n",
+    "start = 0.35\n",
     "stop = 0.5\n",
     "sfreq = 200\n",
     "path = op.join(Analysis_path, task, 'meg', 'Stats', str(start)+'_'+str(stop))\n",
     "filename = op.join(path, name+'-'+noise_cov+'.nc')\n",
-    "test_key = 'N_vs_E+FA-OM'\n",
+    "test_key = 'RS_vs_FA'\n",
     "p_thresh = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray (data: 3, hemisphere: 2, time: 41, src: 10242)>\n",
-       "array([[[[  6.906465e-02, ...,   1.268053e+01],\n",
+       "<xarray.DataArray (data: 3, hemisphere: 2, time: 31, src: 10242)>\n",
+       "array([[[[ 0.030153, ...,  0.313315],\n",
        "         ..., \n",
-       "         [  4.506646e-01, ...,   3.089404e+00]],\n",
+       "         [-0.080442, ..., -0.462933]],\n",
        "\n",
-       "        [[  2.904559e-01, ...,   4.491989e+00],\n",
+       "        [[-0.456215, ..., -1.07273 ],\n",
        "         ..., \n",
-       "         [  1.215011e+00, ...,   8.858618e-01]]],\n",
+       "         [ 0.84464 , ..., -0.440475]]],\n",
        "\n",
        "\n",
        "       ..., \n",
-       "       [[[  0.000000e+00, ...,   1.000000e+00],\n",
+       "       [[[ 0.      , ...,  0.      ],\n",
        "         ..., \n",
-       "         [  0.000000e+00, ...,   0.000000e+00]],\n",
+       "         [ 0.      , ...,  0.      ]],\n",
        "\n",
-       "        [[  0.000000e+00, ...,   1.300000e+02],\n",
+       "        [[ 0.      , ...,  0.      ],\n",
        "         ..., \n",
-       "         [  0.000000e+00, ...,   0.000000e+00]]]])\n",
+       "         [ 0.      , ...,  0.      ]]]])\n",
        "Coordinates:\n",
-       "  * time        (time) float64 0.3 0.305 0.31 0.315 0.32 0.325 0.33 0.335 ...\n",
-       "  * src         (src) float64 0.0 1.0 2.0 3.0 4.0 5.0 6.0 7.0 8.0 9.0 10.0 ...\n",
        "  * hemisphere  (hemisphere) object 'left' 'right'\n",
+       "  * time        (time) float64 0.35 0.355 0.36 0.365 0.37 0.375 0.38 0.385 ...\n",
+       "  * src         (src) int64 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 ...\n",
        "  * data        (data) object 'T_stat' 'p_val' 'clu_inds'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,32 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adorb\\WinPython-64bit-3.6.3.0Qt5\\python-3.6.3.amd64\\lib\\site-packages\\ipykernel_launcher.py:7: UserWarning: \n",
+      "No significant cluster for left hemisphere.\n",
+      "\n",
+      "  import sys\n"
+     ]
     }
    ],
    "source": [
-    "np.arange(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if np.where(pv_lh<p_thresh)[0].any():\n",
-    "    t_signif_lh = np.unique(np.where(pv_lh<p_thresh)[0], return_counts=True)\n",
+    "if np.where(stats.loc['p_val', 'left']<p_thresh)[0].any():\n",
+    "    t_signif_lh = np.unique(np.where(stats.loc['p_val', 'left']<p_thresh)[0], return_counts=True)\n",
     "    best_t_lh = t_signif_lh[0][t_signif_lh[1].argsort()][::-1]\n",
     "    print(t_signif_lh)\n",
     "    print(best_t_lh)\n",
@@ -115,12 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adorb\\WinPython-64bit-3.6.3.0Qt5\\python-3.6.3.amd64\\lib\\site-packages\\ipykernel_launcher.py:7: UserWarning: \n",
+      "No significant cluster for right hemisphere.\n",
+      "\n",
+      "  import sys\n"
+     ]
+    }
+   ],
    "source": [
-    "if np.where(pv_rh<p_thresh)[0].any():\n",
-    "    t_signif_rh = np.unique(np.where(pv_rh<p_thresh)[0], return_counts=True)\n",
+    "if np.where(stats.loc['p_val', 'right']<p_thresh)[0].any():\n",
+    "    t_signif_rh = np.unique(np.where(stats.loc['p_val', 'left']<p_thresh)[0], return_counts=True)\n",
     "    best_t_rh = t_signif_rh[0][t_signif_rh[1].argsort()][::-1]\n",
     "    print(t_signif_rh)\n",
     "    print(best_t_rh)\n",
